objects/ASI_CRM_Physical_Inventory_Check__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Month__c</fullName>
        <defaultValue>IF(DAY(TODAY())&gt;10,
IF(
  MONTH(TODAY()) = 12,
  DATE( YEAR(TODAY()), 12, 31 ),
  DATE( YEAR(TODAY()), MONTH (TODAY()) + 1, 1 ) - 1 
)
,
IF(
  MONTH(TODAY()) = 1,
  DATE( YEAR(TODAY()), 1, 1 )-1,
  DATE( YEAR(TODAY()), MONTH (TODAY()), 1 ) - 1 
)
)</defaultValue>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Physical_Inventory_Check_Count__c</fullName>
        <label>Physical Inventory Check Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Inventory_Btl__c</fullName>
        <label>Total Inventory (Btl)</label>
        <summarizedField>ASI_CRM_Physical_Inventory_Check_Item__c.ASI_CRM_Inventory_Btl__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Physical_Inventory_Check_Item__c.ASI_CRM_Physical_Inventory_Check__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WS__c</fullName>
        <label>WS</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Inventory Check</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Wholesaler (CN)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Physical Inventory Checks</relationshipLabel>
        <relationshipName>Physical_Inventory_Checks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Physical Inventory Check</label>
    <listViews>
        <fullName>AS_CRM_CN_Physical_Inventory_Check</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_WS__c</columns>
        <columns>ASI_CRM_Confirmed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Physical_Inventory_Check__c.ASI_CRM_CN_Inventory_Check</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>PIC-0012262</value>
        </filters>
        <filters>
            <field>ASI_CRM_Month__c</field>
            <operation>equals</operation>
            <value>6/30/2018</value>
        </filters>
        <label>CN Physical Inventory Check</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_WS__c</columns>
        <columns>ASI_CRM_Month__c</columns>
        <columns>ASI_CRM_Total_Inventory_Btl__c</columns>
        <columns>ASI_CRM_Confirmed__c</columns>
        <columns>ASI_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PIC-{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Physical Inventory Checks</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Inventory_Check</fullName>
        <active>true</active>
        <label>CN Inventory Check</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>